--- a/css-wheels/zh.learnlayout.com/index.html
+++ b/css-wheels/zh.learnlayout.com/index.html
@@ -7,7 +7,7 @@
     <title>Document</title>
   </head>
   <body>
-    <div class="container">
+    <div>
       <h2 class="test-margin-auto title" style="color: #d64078">学习CSS布局</h2>
       <h3 class="test-margin-auto title block">#1 margin: auto</h3>
       <pre class="test-margin-auto code">
@@ -44,6 +44,7 @@
     width: 500px;
     margin: 20px auto;
     box-sizing: content-box;
+    background: #78d4bc;
   }
   
   .fancy {
@@ -52,6 +53,7 @@
     padding: 50px;
     box-sizing: content-box;
     border: solid #ee6b9b 3px;
+    background: #78d4bc;
   }
   </pre>
     <div class="simple content-box">
@@ -63,12 +65,266 @@
     <div class="test-max-width block content">
       以前有一个代代相传的解决方案是通过数学计算。CSS开发者需要用比他们实际想要的宽度小一点的宽度，需要减去内边距和边框的宽度。值得庆幸地是你不需要再这么做了...
     </div>
+    <h3 class="test-margin-auto title block">#4 box-sizing</h3>
+    <div class="test-max-width block content">
+      人们慢慢的意识到传统的盒子模型不直接，所以他们新增了一个叫做 box-sizing 的CSS属性。当你设置一个元素为 box-sizing: border-box;
+      时，此元素的内边距和边框不再会增加它的宽度。这里有一个与前一页相同的例子，唯一的区别是两个元素都设置了 box-sizing: border-box; ：
+    </div>
+    <pre class="test-max-width code" style="margin-top: 20px">
+  .simple {
+    width: 500px;
+    margin: 20px auto;
+    box-sizing: border-box;
+    background: #78d4bc;
+  }
+  
+  .fancy {
+    width: 500px;
+    margin: 20px auto;
+    padding: 50px;
+    border: solid #ee6b9b 3px;
+    box-sizing: border-box;
+    background: #78d4bc;
+  }
+    </pre>
+    <div class="simple">
+      simple: 我们现在一样大小了！ border-box 的实际 width 为 content + padding（0） + border（0） = 500px
+    </div>
+    <div class="fancy">
+      fancy: 万岁！ border-box 的实际 width 为 content + padding(50px*2) + border(3px*2) = 500px
+    </div>
+    <h3 class="test-margin-auto title block">#5 position</h3>
+    <pre class="test-max-width code" style="margin-top: 20px">
+  .container {
+    position: relative;
+  }
+  .nav {
+    position: absolute;
+    left: 0px;
+    width: 100px;
+  }
+  .section {
+    /* position is static by default */
+    margin-left: 100px;
+  }
+  .footer {
+    position: fixed;
+    bottom: 0;
+    left: 50%;
+    transform: translate(-50%);
+    height: 70px;
+    background-color: white;
+    width: 100%;
+    background: #FDC72F;
+  }
+  body {
+    margin-bottom: 120px;
+  }
+    </pre>
+    <div class="container test-max-width content block">
+      <div class="nav">
+        <div><a href="./index.html">Home</a></div>
+        <div><a href="./index.html">Content</a></div>
+        <div><a href="./index.html">About</a></div>
+      </div>
+      <section class="section">
+        section 的 margin-left 样式确保了有足够的空间容纳 nav 元素。
+      </section>
+      <section class="section ">
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem
+        egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
+        massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.
+        Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum
+        dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
+        venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus.
+        Mauris quis diam velit.
+      </section>
+      <section class="section">
+        注意观察当你调整浏览器窗口时发生了什么。效果很赞！
+      </section>
+      <footer class="footer test-max-width">
+        如果你使用了一个固定定位的页眉或页脚，确保有足够的空间来显示它们！我在 body 上面加了 margin-bottom 。(#5 position)
+      </footer>
+    </div>
+    <h3 class="test-margin-auto title block">#6 百分比宽度</h3>
+    <pre class="code test-max-width block">
+  article img {
+    float: right;
+    width: 50%;
+  }
+    </pre>
+    <div class="block test-max-width content clear-float">
+      <img class="img" src="https://i.niupic.com/images/2020/03/15/71rD.png" alt="dog" />
+      <p>百分比是一种相对于包含块的计量单位。它对图片很有用：如下我们实现了图片宽度始终是容器宽度的50%。把页面缩小看下效果！Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem
+        egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor
+        vitae
+        massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.
+        Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper
+        ipsum
+        dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
+        venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus.
+        Mauris quis diam velit.
+        </p>
+    </div>
+    <h3 class="test-margin-auto title block">#7 媒体查询</h3>
+    <div class="test-max-width block content">
+      “响应式设计（Responsive Design” 是一种让网站针对不同的浏览器和设备“呈现”不同显示效果的策略，这样可以让网站在任何情况下显示的很棒！
+      媒体查询是做此事所需的最强大的工具。让我们使用百分比宽度来布局，然后在浏览器变窄到无法容纳侧边栏中的菜单时，把布局显示成一列：
+    </div>
+    <pre class="test-max-width code" style="margin-top: 20px">
+  @media screen and (min-width:600px) {
+    nav {
+      float: left;
+      width: 25%;
+    }
+    section {
+      margin-left: 25%;
+    }
+  }
+  @media screen and (max-width:599px) {
+    nav li {
+      display: inline;
+    }
+  }
+    </pre>
+    <div class="media-container test-max-width block content">
+      <nav>
+        <li>Home</li>
+        <li>Tacu Menu</li>
+        <li>Draft List</li>
+        <li>Hours</li>
+        <li>Directions</li>
+      </nav>
+      <section>
+        当你调整浏览器窗口大小时，布局比以前更酷了！
+      </section>
+      <section>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem
+        egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
+        massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.
+        Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum
+        dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
+        venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus.
+        Mauris quis diam velit.
+      </section>
+    </div>
+    <h3 class="test-margin-auto title block">#8 inline-block 布局</h3>
+    <div class="test-max-width block content">
+      你可以使用 inline-block 来布局。但有一些事情需要你牢记：
+      <li>vertical-align 属性会影响到 inline-block 元素，你可能需要把它的值设置为 top 。</li>
+      <li>你需要设置每一列的宽度</li>
+      <li>如果HTML源代码中元素之间有空格，那么列与列之间会产生空隙</li>
+    </div>
+    <pre class="test-max-width code" style="margin-top: 20px">
+  nav {
+    display: inline-block;
+    vertical-align: top;
+    width: 25%;
+  }
+  .column {
+    display: inline-block;
+    vertical-align: top;
+    width: 75%;
+  }
+    </pre>
+    <div class="inline-container test-max-width block content">
+      <nav>
+        <li>Home</li>
+        <li>Tacu Menu</li>
+        <li>Draft List</li>
+        <li>Hours</li>
+        <li>Directions</li>
+      </nav>
+      <div class="column">
+        <section>Tada!</section>
+        <section>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem
+        egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
+        massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.
+        Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum
+        dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
+        venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus.
+        Mauris quis diam velit.</section>
+      </div>
+    </div>
+    <h3 class="test-margin-auto title block">#9 column</h3>
+    <div class="test-max-width block content">这里有一系列新的CSS属性，可以帮助你很轻松的实现文字的多列布局。让我们瞧瞧：</div>
+    <pre class="test-max-width code" style="margin-top: 20px">
+  .three-column {
+    column-count: 3;
+    column-gap: 1em;
+  }
+    </pre>
+    <div class="three-column test-max-width block content">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem
+      egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
+      massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.
+      Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum
+      dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
+      venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus.
+      Mauris quis diam velit.
+    </div>
+    <h3 class="test-margin-auto title block">#10 FlexBox</h3>
+    <pre class="test-max-width code" style="margin-top: 20px">
+  .container {
+    display: flex;
+  }
+  nav {
+    width: 200px;
+  }
+  .flex-column {
+    flex: 1;
+  }
+    </pre>
+    <div class="flex-container test-max-width block content">
+      <nav>
+        <li>Home</li>
+        <li>Tacu Menu</li>
+        <li>Draft List</li>
+        <li>Hours</li>
+        <li>Directions</li>
+      </nav>
+      <div class="flex-column">
+        <section style="background:#ee6b9b">Flexbox好容易使用！</section>
+        <section>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus imperdiet, nulla et dictum interdum, nisi lorem
+        egestas odio, vitae scelerisque enim ligula venenatis dolor. Maecenas nisl est, ultrices nec congue eget, auctor vitae
+        massa. Fusce luctus vestibulum augue ut aliquet. Mauris ante ligula, facilisis sed ornare eu, lobortis in odio.
+        Praesent convallis urna a lacus interdum ut hendrerit risus congue. Nunc sagittis dictum nisi, sed ullamcorper ipsum
+        dignissim ac. In at libero sed nunc venenatis imperdiet sed ornare turpis. Donec vitae dui eget tellus gravida
+        venenatis. Integer fringilla congue eros non fermentum. Sed dapibus pulvinar nibh tempor porta. Cras ac leo purus.
+        Mauris quis diam velit.</section>
+      </div>
+    </div>
+    <h4 class="test-max-width block">使用 Flex 的牛逼布局</h4>
+    <pre class="test-max-width code" style="margin-top: 20px">
+  .container {
+    display: flex;
+  }
+  .initial {
+    flex: initial;
+    width: 200px;
+    min-width: 100px;
+  }
+  .none {
+    flex: none;
+    width: 200px;
+  }
+  .flex1 {
+    flex: 1;
+  }
+  .flex2 {
+    flex: 2;
+  }
+    </pre>
+    <div class="flex-container test-max-width block content">
+      <div class="initial box">空间足够的时候，我的宽度是200px，如果空间不足，我会变窄到100px，但不会再窄了。</div>
+      <div class="none box">无论窗口如何变化，我的宽度一直是200px。</div>
+      <div class="flex1 box">我会占满剩余宽度的1/3。</div>
+      <div class="flex2 box">我会占满剩余宽度的2/3。</div>
+    </div>
   </body>
   <style>
     * {
       box-sizing: border-box;
-    }
-    .container {
     }
     .test-margin-auto {
       display: block;
@@ -111,5 +367,98 @@
       background: #78d4bc;
       border: solid #ee6b9b 3px;
     }
+    .container {
+      position: relative;
+    }
+    .nav {
+      position: absolute;
+      left: 0px;
+      width: 100px;
+    }
+    .section {
+      /* position is static by default */
+      margin-left: 100px;
+    }
+    .footer {
+      position: fixed;
+      bottom: 0;
+      left: 50%;
+      transform: translate(-50%);
+      height: 70px;
+      background-color: white;
+      width: 100%;
+      background: #FDC72F;
+    }
+    body {
+      margin-bottom: 120px;
+    }
+    .img {
+      float: right;
+      width: 50%;
+    }
+    .float-container {
+      position: relative;
+    }
+    .clear-float {
+      overflow: auto;
+      zoom: 1;
+    }
+    @media screen and (min-width:600px) {
+      .media-container nav{
+          float: left;
+          width: 25%;
+      }
+      .media-container section {
+        margin-left: 25%;
+      }
+    }
+    @media screen and (max-width:599px) {
+      .media-container nav li {
+        display: inline;
+      }
+    }
+    .inline-container nav {
+      display: inline-block;
+      vertical-align: top;
+    }
+    .inline-container .column {
+      display: inline-block;
+      vertical-align: top;
+      width: 75%;
+      margin-left: 20px;
+    }
+    .three-column {
+      column-count: 3;
+      column-gap: 1em;
+    }
+    .flex-container {
+      display: -webkit-flex;
+      display: flex;
+    }
+    .flex-container nav {
+      width: 200px;
+    }
+    .flex-column {
+      flex: 1;
+    }
+    .initial {
+      flex: initial;
+      width: 200px;
+      min-width: 100px;
+    }
+    .none {
+      flex: none;
+      width: 200px;
+    }
+    .flex1 {
+      flex: 1;
+    }
+    .flex2 {
+      flex: 2;
+    }
+    .box {
+      border: solid #ee6b9b 1px;
+    }
   </style>
+  </div>
 </html>
